@@ -8,6 +8,7 @@
 
 const semver = require('semver');
 
+const { OUTCOME_SUCCESS, OUTCOME_FAILURE } = require('../../constants');
 const { getDBDestination } = require('../context');
 const shimmer = require('../shimmer');
 const kListenersAdded = Symbol('kListenersAdded');
@@ -32,8 +33,8 @@ module.exports = (mongodb, agent, { version, enabled }) => {
   if (mongodb.instrument) {
     const listener = mongodb.instrument();
     listener.on('started', onStart);
-    listener.on('succeeded', onEnd);
-    listener.on('failed', onEnd);
+    listener.on('succeeded', onSuccess);
+    listener.on('failed', onFailure);
   } else if (mongodb.MongoClient) {
     // mongodb 4.0+ removed the instrument() method in favor of
     // listeners on the instantiated client objects. There are two mechanisms
@@ -51,8 +52,8 @@ module.exports = (mongodb, agent, { version, enabled }) => {
         }
         super(...args);
         this.on('commandStarted', onStart);
-        this.on('commandSucceeded', onEnd);
-        this.on('commandFailed', onEnd);
+        this.on('commandSucceeded', onSuccess);
+        this.on('commandFailed', onFailure);
         this[kListenersAdded] = true;
       }
     }
@@ -102,8 +103,8 @@ module.exports = (mongodb, agent, { version, enabled }) => {
             } else {
               if (!client[kListenersAdded]) {
                 client.on('commandStarted', onStart);
-                client.on('commandSucceeded', onEnd);
-                client.on('commandFailed', onEnd);
+                client.on('commandSucceeded', onSuccess);
+                client.on('commandFailed', onFailure);
                 client[kListenersAdded] = true;
               }
               callback(err, client);
@@ -115,8 +116,8 @@ module.exports = (mongodb, agent, { version, enabled }) => {
         p.then((client) => {
           if (!client[kListenersAdded]) {
             client.on('commandStarted', onStart);
-            client.on('commandSucceeded', onEnd);
-            client.on('commandFailed', onEnd);
+            client.on('commandSucceeded', onSuccess);
+            client.on('commandFailed', onFailure);
             client[kListenersAdded] = true;
           }
         });
@@ -127,17 +128,15 @@ module.exports = (mongodb, agent, { version, enabled }) => {
 
   function onStart(event) {
     // `event` is a `CommandStartedEvent`
-    // https://github.com/mongodb/specifications/blob/master/source/command-monitoring/command-monitoring.rst#api
-    // E.g. with mongodb@3.6.3:
+    // https://github.com/mongodb/specifications/blob/master/source/command-logging-and-monitoring/command-logging-and-monitoring.rst#command-started-message
+    // E.g. with mongodb@6.2.0:
     //   CommandStartedEvent {
-    //     address: '127.0.0.1:27017',
-    //     connectionId: 1,
+    //     connectionId: '127.0.0.1:27017',
     //     requestId: 1,
     //     databaseName: 'test',
     //     commandName: 'insert',
     //     command:
     //     { ... } }
-
     const name = [
       event.databaseName,
       collectionFor(event),
@@ -174,10 +173,51 @@ module.exports = (mongodb, agent, { version, enabled }) => {
     }
   }
 
-  function onEnd(event) {
+  function onSuccess(event) {
+    // `event` is a `CommandSucceededEvent`
+    // https://github.com/mongodb/specifications/blob/master/source/command-logging-and-monitoring/command-logging-and-monitoring.rst#command-succeeded-message
+    // E.g. with mongodb@6.2.0:
+    //   CommandSucceededEvent {
+    //     connectionId: '127.0.0.1:27017',
+    //     requestId: 1,
+    //     duration: 1,
+    //     reply: { ... }
+    //   }
     if (!activeSpans.has(event.requestId)) return;
+
     const span = activeSpans.get(event.requestId);
     activeSpans.delete(event.requestId);
+
+    // From mongodb@3.6.0 and up some commands like `deleteOne` may contain
+    // error data inside the `reply` property. It makes sense to capture it.
+    const writeErrors = event?.reply?.writeErrors;
+
+    if (writeErrors && writeErrors.length) {
+      agent.captureError(writeErrors[0].errmsg, {
+        skipOutcome: true,
+        parent: span,
+      });
+    }
+    span.setOutcome(OUTCOME_SUCCESS);
+    span.end(span._timer.start / 1000 + event.duration);
+  }
+
+  function onFailure(event) {
+    // `event` is a `CommandFailedEvent`
+    // https://github.com/mongodb/specifications/blob/master/source/command-logging-and-monitoring/command-logging-and-monitoring.rst#command-failed-message
+    // E.g. with mongodb@6.2.0:
+    // CommandFailedEvent {
+    //   connectionId: '127.0.0.1:27017',
+    //   requestId: 6,
+    //   commandName: "find",
+    //   duration: 1,
+    //   "failure": { ... }
+    // }
+    if (!activeSpans.has(event.requestId)) return;
+
+    const span = activeSpans.get(event.requestId);
+    activeSpans.delete(event.requestId);
+    span.setOutcome(OUTCOME_FAILURE);
     span.end(span._timer.start / 1000 + event.duration);
   }
 
